# scarlatti

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  PACKAGERS  README.md  build-dependencies.md  build-flatpak.sh  github-ssh-init.sh  how-do-I.md  install-flatpak.sh  install.sh  lollypop.flatpak  lollypop.in  lollypop.sh  meson.build  org.gnome.Lollypop.json  org.scarlatti.Scarlatti.json  pypi-dependencies.json  requirements.txt  run.sh  run2  scarlatti-vs-lollypop.md  scarlatti.flatpak  scarlatti.in  scarlatti.sh  uninstall.sh  update-gitignore
data/: AboutDialog.ui.in  AlbumBannerWidget.ui  AlbumsBannerWidget.ui  Appmenu.ui  ArtistBannerWidget.ui  ArtistInformation.ui  ArtworkSearch.ui  EqualizerWidget.ui  FullScreen.ui  LovedWidget.ui  LyricsView.ui  MiniPlayer.ui  PlaylistBannerWidget.ui  PlaylistView.ui  RadioMenu.ui  RadioPopover.ui  RatingWidget.ui  SearchBannerWidget.ui  SearchView.ui  SettingsAppearance.ui  SettingsBehaviour.ui  SettingsDialog.ui  SettingsWeb.ui  Shortcuts.ui  SmartPlaylistView.ui  ToolbarEnd.ui  ToolbarInfo.ui  ToolbarPlayback.ui  TypeAhead.ui  application.css  lollypop.gresource.xml  meson.build  org.gnome.Lollypop.appdata.xml.in  org.gnome.Lollypop.desktop.in  org.gnome.Lollypop.gschema.xml  org.scarlatti.Scarlatti.appdata.xml.in  org.scarlatti.Scarlatti.desktop.in  org.scarlatti.Scarlatti.gschema.xml  scarlatti.1  scarlatti.gresource.xml
hooks/: pre-commit.archlinux  pre-commit.debian  pre-commit.fedora  pre-commit.ubuntu
lollypop/: adaptive.py  app_notification.py  application.py  application_actions.py  application_cmdline.py  art.py  art_album.py  art_artist.py  art_base.py  art_downloader.py  art_radio.py  artwork.py  artwork_album.py  artwork_artist.py  artwork_downloader.py  artwork_downloader_album.py  artwork_downloader_artist.py  artwork_manager.py  assistant.py  assistant_flatpak.py  assistant_google.py  assistant_lastfm.py  assistant_musicbrainz.py  codecs.py  collection_item.py  collection_scanner.py  collectionscanner.py  container.py  container_adaptive.py  container_filter.py  container_history.py  container_lists.py  container_motion.py  container_notification.py  container_playlists.py  container_scanner.py  container_stack.py  container_views.py  controller_information.py  controller_playback.py  (+251 more)
save/: database_mpd.py  mpd.diff  mpd.py
scarlatti/: .flake8  application.py  application_actions.py  application_cmdline.py  artwork.py  artwork_album.py  artwork_artist.py  artwork_downloader.py  artwork_downloader_album.py  artwork_downloader_artist.py  artwork_manager.py  (+199 more)
search-provider/: lollypop-sp.in  meson.build  org.scarlatti.Scarlatti.SearchProvider.ini  org.scarlatti.Scarlatti.SearchProvider.service.in  scarlatti-sp.in
(+2 files in other folders)
